atom/obsidian-syntax/index.less
.editor, .editor .gutter {
  //background-color: #3F4B4E;
  background-color: #040404;
  color: #81969A;
}

.editor.is-focused .cursor {
  border-color: #E0E2E4;
}

.editor.is-focused .selection .region {
  background-color: #404E51;
}

.editor.is-focused .line-number.cursor-line-no-selection, .editor.is-focused .line.cursor-line {
  background-color: #293134;
}

.text {
  color: #E0E2E4;
  //background-color: #293134;
}

.source {
  color: #E0E2E4;
  //background-color: #293134;
}

.comment {
  color: #66747B;
}

.comment.block {
  font-style: italic;
  color: #66747B;
}

.comment.documentation {
  color: #66747B;
}

.string {
  color: #EC7600;
}

.constant.numeric {
  color: #FFCD22;
}

.constant.language {
  font-weight: bold;
  color: #93C763;
}

.constant.character, .constant.other {
}

.variable.language, .variable.other {
  color: #678CB1;
}

.variable.language.js {
  font-weight: bold;
  color: #93C763;
}

.keyword {
  font-weight: bold;
  color: #93C763;
}

.keyword.operator {
  color: #E0E2E4;
}

.storage {
  font-weight: bold;
  color: #93C763;
}

.entity.name.class {
}

.entity.other.inherited-class {
}

.entity.name.function {
  font-weight: bold;
  color: #678CB1;
}

.variable.parameter {
}

.entity.name.tag {
  font-weight: bold;
  color: #8CBBAD;
}

.entity.other.attribute-name {
  font-weight: bold;
  color: #B3B689;
}

.support.function {
}

.support.constant {
}

.support.type, .support.class {
}

.support.other.variable {
}

.invalid {
}

.punctuation.section.embedded {
  font-weight: bold;
  color: #D955C1;
}

.keyword.operator.class {
  color: #96989A;
}

.meta.delimiter {
  color: #96979A;
}

.meta.brace {
  color: #E8E2B7;
}

.meta.brace.curly {
  color: #96979A;
}

.source.js.embedded {
  background-color: #262C2F;
}

.variable.language.js {
  font-weight: bold;
  color: #93C763;
}

.entity.name.function.js {
  color: #E0E2E4;
}

.entity.name.type.instance.js {
  font-weight: bold;
  color: #AFC0E5;
}

.support.class.js {
  color: #78D023;
}

.storage.modifier.js {
  color: #78D023;
}

.support.constant.js, .support.constant.dom.js {
  color: #78D023;
}

.keyword.operator.js, .punctuation.terminator.statement.js {
  color: #E0E2E4;
}

.entity.name.type.object.js.firebug, .keyword.other.js {
  color: #DA4236;
}

.source.css.embedded {
  color: #E0E2E4;
  background-color: #262C2F;
}

.keyword.control.at-rule.import.css {
  color: #A082BD;
}

.entity.other.attribute-name.class.css {
  color: #93C763;
}

.entity.name.tag.css {
  color: #B3B689;
}

.support.type.property-name.css, .meta.property-name.css {
  color: #678CB1;
}

.keyword.other.unit.css {
  color: #E0E2E4;
}

.variable.parameter.misc.css {
  color: #EC7600;
}

.entity.other.attribute-name.id.css {
  color: #D5AB55;
}

.punctuation.definition.entity.css {
  color: #9CB4AA;
}

.keyword.control.at-rule.sass, .keyword.control.at-rule.import.scss, .keyword.control.at-rule.mixin.scss, .keyword.control.at-rule.include.scss {
  color: #A082BD;
}

.entity.name.function.scss {
  color: #93C763;
}

.variable.parameter.url {
  color: #E1E2CF;
}

.entity.other.attribute-name.id.sass {
  color: #D5AB55;
}

.entity.other.attribute-name.class.sass {
  color: #93C763;
}

.keyword.control.untitled, .entity.name.tag.sass, .entity.name.tag.scss {
  color: #B3B689;
}

.support.type.property-name.sass, .meta.property-name.sass, .meta.property-name.scss {
  color: #a7a8ab;
}

.constant.other.color.rgb-value.scss {
  color: #ffffff;
}

.constant.other.unit.sass, .keyword.other.unit.scss {
  color: #E0E2E4;
}

.punctuation.scss, .punctuation.separator.key-value.scss, .punctuation.section.function.scss, .punctuation.section.property-list.begin.scss, .punctuation.section.property-list.end.scss, .punctuation.terminator.rule.scss {
  color: #96979A;
}

.keyword.other.important.scss {
  color: #93C763;
}

.variable.scss, .variable.parameter.sass {
  color: #678CB1;
}

.string.quoted.double.html, .string.quoted.single.html, .string.quoted.double.xml, .string.quoted.single.xml {
  color: #E1E2CF;
}

.punctuation.definition.tag.begin.html, .punctuation.definition.tag.end.html, .punctuation.definition.tag.html, .punctuation.definition.tag.begin.xml, .punctuation.definition.tag.end.xml, .punctuation.definition.tag.xml, .meta.tag.no-content {
  color: #557182;
}

.entity.name.tag.xml, .entity.name.tag.localname.xml {
  font-weight: bold;
  color: #678CB1;
}

.meta.tag.preprocessor.xml .punctuation.definition.tag.xml {
  color: #557182;
}

.constant.other.name.xml, .string.quoted.other.xml {
  color: #E0E2E4;
}

.meta.tag.sgml.doctype {
  color: #557182;
}

.meta.tag.sgml.doctype .variable.documentroot.xml, .meta.tag.sgml.doctype.html {
  color: #D5AB55;
}

.keyword.doctype, .entity.name.tag.doctype {
  color: #557182;
}

.variable.documentroot {
  color: #E0E2E4;
}

.source.php.embedded {
  background-color: #252C30;
}

.support.function.construct.php {
  color: #93C763;
}

.constant.other.php {
  color: #D39745;
}

.keyword.operator.string.php, .keyword.operator.class.php, .keyword.operator.comparison.php, .punctuation.definition.array.begin.php, .punctuation.definition.array.end.php, .punctuation.terminator.expression.php {
  color: #E8E2B7;
}

.meta.diff, .meta.diff.header {
  color: #F8F8F8;
  background-color: #404E51;
}

.markup.deleted {
  color: #DA4236;
}

.markup.changed {
  color: #72AACA;
}

.markup.inserted {
  color: #93c763;
}

.markup.heading.markdown {
  color: #72AACA;
  background-color: #334658;
}

.markup.raw.inline.markdown {
  color: #93c763;
  background-color: #384c26;
}

.markup.underline.link.markdown {
  color: #93c763;
}

.markup.list.numbered.markdown {
  color: #FFCD22;
}

.markup.list.unnumbered.markdown {
  color: #678CB1;
}

.markup.quote.markdown {
  color: #72AACA;
}

